# sr-dll

./: .gitignore  CMakeLists.txt  README.md
SpeedRunnersAI/: README.md
SpeedRunnersAI/include/: util.h
SpeedRunnersAI/include/game/: game.h  offsets.h  structs.h
SpeedRunnersAI/include/inject/: server.h  thread.h
SpeedRunnersAI/src/: dllmain.cpp  util.cpp
SpeedRunnersAI/src/game/: game.cpp  memory.cpp
SpeedRunnersAI/src/inject/: server.cpp  thread.cpp
dev-tools/: parse_cheat_table.py
reverse-engineering/: Classes.rcnet  SpeedRunners.CT  addresses.txt  reclass-structs.json  speedrunners-structs.json
sr-dll/include/: util.h
sr-dll/include/game/: communication.h  memory.h  offsets.h  packet.h  signatures.h  structs.h
sr-dll/include/inject/: detour.h  ntinfo.h
sr-dll/src/: dllmain.cpp  util.cpp
sr-dll/src/game/: communication.cpp  memory.cpp  offsets.cpp  packet.cpp
sr-dll/src/inject/: ntinfo.cpp  server.cpp  thread.cpp
sr-lib/: CMakeLists.txt
sr-lib/include/game/: communication.h  game.h  offsets.h
sr-lib/include/inject/: server.h
sr-lib/src/game/: communication.cpp  game.cpp  memory.cpp  offsets.cpp  packet.cpp  signatures.cpp
sr-lib/src/inject/: detour.cpp  server.cpp
